Bug fix: Dropdown arrow icon visible on dark mode.

--- a/frontend/api/style.scss
+++ b/frontend/api/style.scss
@@ -106,6 +106,10 @@ body {
     $form-select-disabled-color: #696b6e;
     $form-select-disabled-border-color: #191d1f;
 
+    /* Dropdown down arrow icon */
+    $form-select-indicator-color: #ffffff;
+    $form-select-indicator: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$form-select-indicator-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>");
+
     /* Different color for dropdown placeholder text (selected text set to fff above) */
     select:invalid {
         color: #696b6e;
